apps/opengist/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opengist
  namespace: $(NAMESPACE_APPLICATIONS)
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: opengist.bijouxlabs.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opengist
            port:
              number: 6157
  tls:
  - hosts:
    - opengist.bijouxlabs.cc
